[tool.poetry]
name = "python-async"
version = "0.1.0"
description = ""
authors = ["Grenui92 <grenui92@gmail.com>"]
readme = "README.md"
packages = [{include = "python_async"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
websockets = "^10.4"
names = "^0.3.0"
aiofile = "^3.8.1"
aiopath = "^0.6.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
